// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MinInnboks with empty input 1`] = `null`;

exports[`MinInnboks with null input 1`] = `null`;

exports[`MinInnboks with one document 1`] = `
<a
  className="message clickable"
  data-ga="Dittnav/Varsel/dokument_varsel melding"
  href="https://tjenester-t6.nav.no/mininnboks"
>
  <span
    aria-label="dokument varsel ikon"
    className="icon document-icon"
  />
  <div
    className="texts"
  >
    <p>
      <span>
        Du har ett ulest dokument i din innboks
      </span>
    </p>
  </div>
</a>
`;

exports[`MinInnboks with one task 1`] = `
<a
  className="message clickable"
  data-ga="Dittnav/Varsel/oppgave_varsel melding"
  href="https://tjenester-t6.nav.no/mininnboks"
>
  <span
    aria-label="oppgave varsel ikon"
    className="icon registration-icon"
  />
  <div
    className="texts"
  >
    <p>
      <span>
        Du har én ulest oppgave
      </span>
    </p>
  </div>
</a>
`;

exports[`MinInnboks with one unanswered 1`] = `
<a
  className="message clickable"
  data-ga="Dittnav/Varsel/ubesvart melding"
  href="https://tjenester-t6.nav.no/mininnboks"
>
  <span
    aria-label="ubesvart ikon"
    className="icon mininnboks-default-icon"
  />
  <div
    className="texts"
  >
    <p>
      <span>
        Du har ett ubesvart spørsmål i din innboks
      </span>
    </p>
  </div>
</a>
`;

exports[`MinInnboks with one unread task and one unread 1`] = `
Array [
  <a
    className="message clickable"
    data-ga="Dittnav/Varsel/oppgave_varsel melding"
    href="https://tjenester-t6.nav.no/mininnboks"
  >
    <span
      aria-label="oppgave varsel ikon"
      className="icon registration-icon"
    />
    <div
      className="texts"
    >
      <p>
        <span>
          Du har én ulest oppgave
        </span>
      </p>
    </div>
  </a>,
  <a
    className="message clickable"
    data-ga="Dittnav/Varsel/ulest melding"
    href="https://tjenester-t6.nav.no/mininnboks"
  >
    <span
      aria-label="ulest ikon"
      className="icon mininnboks-default-icon"
    />
    <div
      className="texts"
    >
      <p>
        <span>
          Du har én ulest melding i din innboks
        </span>
      </p>
    </div>
  </a>,
]
`;

exports[`MinInnboks with two documents 1`] = `
<a
  className="message clickable"
  data-ga="Dittnav/Varsel/dokument_varsel melding"
  href="https://tjenester-t6.nav.no/mininnboks"
>
  <span
    aria-label="dokument varsel ikon"
    className="icon document-icon"
  />
  <div
    className="texts"
  >
    <p>
      <span>
        Du har to uleste dokumenter i din innboks
      </span>
    </p>
  </div>
</a>
`;

exports[`MinInnboks with two documents but different types 1`] = `
Array [
  <a
    className="message clickable"
    data-ga="Dittnav/Varsel/dokument_varsel melding"
    href="https://tjenester-t6.nav.no/mininnboks"
  >
    <span
      aria-label="dokument varsel ikon"
      className="icon document-icon"
    />
    <div
      className="texts"
    >
      <p>
        <span>
          Du har  uleste dokumenter i din innboks
        </span>
      </p>
    </div>
  </a>,
  <a
    className="message clickable"
    data-ga="Dittnav/Varsel/ubesvart melding"
    href="https://tjenester-t6.nav.no/someother"
  >
    <span
      aria-label="ubesvart ikon"
      className="icon mininnboks-default-icon"
    />
    <div
      className="texts"
    >
      <p>
        <span>
          Du har  ubesvarte spørsmål i din innboks
        </span>
      </p>
    </div>
  </a>,
]
`;

exports[`MinInnboks with two tasks 1`] = `
<a
  className="message clickable"
  data-ga="Dittnav/Varsel/oppgave_varsel melding"
  href="https://tjenester-t6.nav.no/mininnboks"
>
  <span
    aria-label="oppgave varsel ikon"
    className="icon registration-icon"
  />
  <div
    className="texts"
  >
    <p>
      <span>
        Du har én ulest oppgave
      </span>
    </p>
  </div>
</a>
`;

exports[`MinInnboks with two unanswered 1`] = `
<a
  className="message clickable"
  data-ga="Dittnav/Varsel/ubesvart melding"
  href="https://tjenester-t6.nav.no/mininnboks"
>
  <span
    aria-label="ubesvart ikon"
    className="icon mininnboks-default-icon"
  />
  <div
    className="texts"
  >
    <p>
      <span>
        Du har to ubesvarte spørsmål i din innboks
      </span>
    </p>
  </div>
</a>
`;

exports[`MinInnboks with two unread 1`] = `
<a
  className="message clickable"
  data-ga="Dittnav/Varsel/ulest melding"
  href="https://tjenester-t6.nav.no/mininnboks"
>
  <span
    aria-label="ulest ikon"
    className="icon mininnboks-default-icon"
  />
  <div
    className="texts"
  >
    <p>
      <span>
        Du har to uleste meldinger i din innboks
      </span>
    </p>
  </div>
</a>
`;

exports[`MinInnboks with zero tasks 1`] = `
<a
  className="message clickable"
  data-ga="Dittnav/Varsel/oppgave_varsel melding"
  href="https://tjenester-t6.nav.no/mininnboks"
>
  <span
    aria-label="oppgave varsel ikon"
    className="icon registration-icon"
  />
  <div
    className="texts"
  >
    <p>
      <span>
        Du har  uleste oppgaver
      </span>
    </p>
  </div>
</a>
`;

exports[`MinInnboks without any messages 1`] = `null`;
